--- a/gaurav.html
+++ b/gaurav.html
@@ -83,7 +83,7 @@
   </div>
 
 
-  <!--Sing up Modal -->
+  <!--Sign up Modal -->
   <div class="modal fade" id="SignupModal" tabindex="-1" aria-labelledby="SignupModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
